Se ha dado funcionalidad a las vistas de administrar cosas de las peliculas, asi mismo se agrego vista y funcionalidad de editar estas

--- a/app/src/main/res/layout/activity_crear_director.xml
+++ b/app/src/main/res/layout/activity_crear_director.xml
@@ -26,13 +26,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="227dp"
         android:layout_height="274dp"
-        android:layout_marginTop="216dp"
         android:background="@drawable/fondo_creacion"
         android:dividerPadding="8dp"
         android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:showDividers="middle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
