--- a/app/src/main/res/layout/activity_crear_peliculas.xml
+++ b/app/src/main/res/layout/activity_crear_peliculas.xml
@@ -259,7 +259,6 @@
         </LinearLayout>
     </ScrollView>
 
-
     <include
         android:id="@+id/includeCreacion"
         layout="@layout/deplegable_creacion"
@@ -336,5 +335,14 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <include
+        android:id="@+id/navBarInclude"
+        layout="@layout/nav_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
