--- a/app/src/main/res/layout/administrar_tipos.xml
+++ b/app/src/main/res/layout/administrar_tipos.xml
@@ -50,7 +50,7 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/agregar" />
+                app:srcCompat="@drawable/cerrar" />
 
             <TextView
                 android:id="@+id/txt_Tipo"
@@ -68,15 +68,10 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvPeliculas"
+            android:id="@+id/rvTipos"
             android:layout_width="match_parent"
             android:layout_height="386dp"
             android:paddingHorizontal="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/navBarInclude"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchView"
             tools:listitem="@layout/item_cosas_pelicula" />
 
         <LinearLayout
