--- a/app/src/main/res/layout/despliegue_nav_plus.xml
+++ b/app/src/main/res/layout/despliegue_nav_plus.xml
@@ -18,16 +18,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></ImageView>
 
+
     <ImageButton
         android:id="@+id/btnPeticiones"
         android:layout_width="69dp"
         android:layout_height="63dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="72dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.362"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:srcCompat="@drawable/list" />
 
@@ -35,13 +37,39 @@
         android:id="@+id/btnUsuario"
         android:layout_width="45dp"
         android:layout_height="46dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="44dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:srcCompat="@drawable/user" />
+
+    <ImageButton
+        android:id="@+id/btnRegistroClientes"
+        android:layout_width="45dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="208dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:srcCompat="@drawable/pdf_file"
+        app:tint="#FFFFFF" />
+
+    <ImageButton
+        android:id="@+id/btnRegistroCines"
+        android:layout_width="45dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="48dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:srcCompat="@drawable/pdf_file"
+        app:tint="#FFFFFF" />
 
     <TextView
         android:id="@+id/textView6"
@@ -63,6 +91,30 @@
         app:layout_constraintEnd_toEndOf="@+id/btnPeticiones"
         app:layout_constraintStart_toStartOf="@+id/btnPeticiones"
         app:layout_constraintTop_toBottomOf="@+id/btnPeticiones" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Reporte\nClientes"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btnRegistroClientes"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="@+id/btnRegistroClientes"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroClientes" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reporte\nPor Cines"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/btnRegistroCines"
+        app:layout_constraintStart_toStartOf="@+id/btnRegistroCines"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegistroCines" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
