--- a/app/src/main/res/layout/activity_crear_peliculas.xml
+++ b/app/src/main/res/layout/activity_crear_peliculas.xml
@@ -127,6 +127,34 @@
                 android:textColorHint="#A2A2A2"
                 android:textSize="13sp" />
 
+
+
+            <TextView
+                android:id="@+id/txt_sinopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:text="Sinopsis"
+                android:textColor="#FDFDFD"
+                android:textSize="13sp" />
+
+            <EditText
+                android:id="@+id/edtSinopsis"
+                android:layout_width="356dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="12dp"
+                android:ems="10"
+                android:hint="Escribir sinopsis"
+                android:inputType="text"
+                android:textColor="#FDFDFD"
+                android:textColorHint="#A2A2A2"
+                android:textSize="13sp" />
+
+
+
+
             <TextView
                 android:id="@+id/txt_Director"
                 android:layout_width="match_parent"
@@ -344,5 +372,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnPortada"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="120dp"
+        android:text="Portada"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
