--- a/app/src/main/res/layout/item_funcion.xml
+++ b/app/src/main/res/layout/item_funcion.xml
@@ -3,25 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srcCompat="@drawable/fondofuncion"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-137dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:scaleType="fitXY"
+        app:layout_constraintDimensionRatio="1002:289"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondofuncion" />
 
     <TextView
-        android:id="@+id/CINE"
+        android:id="@+id/CINETxT"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:text="CINEMARK"
         android:textAlignment="textEnd"
         android:textColor="#FDFDFD"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="329dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/CINETxT">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHoras"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:paddingHorizontal="8dp"
+
+            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_hora"
+
+            tools:orientation="horizontal" />
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
