--- a/app/src/main/res/drawable/fondofuncion.xml
+++ b/app/src/main/res/drawable/fondofuncion.xml
@@ -1,27 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="1010dp"
-    android:height="297dp"
-    android:viewportWidth="1010"
-    android:viewportHeight="297">
-  <path
-      android:pathData="M56,0L954,0A52,52 0,0 1,1006 52L1006,237A52,52 0,0 1,954 289L56,289A52,52 0,0 1,4 237L4,52A52,52 0,0 1,56 0z"
-      android:fillColor="#080809"
-      android:fillAlpha="0.5"/>
-  <path
-      android:pathData="M56,1.8L954,1.8A50.3,50.3 0,0 1,1004.3 52L1004.3,237A50.3,50.3 0,0 1,954 287.3L56,287.3A50.3,50.3 0,0 1,5.8 237L5.8,52A50.3,50.3 0,0 1,56 1.8z"
-      android:strokeWidth="3.5"
-      android:fillColor="#00000000">
-    <aapt:attr name="android:strokeColor">
-      <gradient
-          android:startX="-108.3"
-          android:startY="145.1"
-          android:endX="1099.7"
-          android:endY="145.1"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF000000"/>
-        <item android:offset="0.6" android:color="#FF383180"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+    android:width="300dp"                     android:height="86dp"                     android:viewportWidth="1002"              android:viewportHeight="289">             <path
+    android:pathData="M52,0L950,0A52,52 0,0 1,1002 52L1002,237A52,52 0,0 1,950 289L52,289A52,52 0,0 1,0 237L0,52A52,52 0,0 1,52 0z"
+    android:fillColor="#080809"
+    android:fillAlpha="0.5"/>
+    <path
+        android:pathData="M52,1.8L950,1.8A50.3,50.3 0,0 1,1000.3 52L1000.3,237A50.3,50.3 0,0 1,950 287.3L52,287.3A50.3,50.3 0,0 1,1.8 237L1.8,52A50.3,50.3 0,0 1,52 1.8z"
+        android:strokeWidth="3.5"
+        android:fillColor="#00000000">
+        <aapt:attr name="android:strokeColor">
+            <gradient
+                android:startX="-112.3"              android:startY="145.1"
+                android:endX="1095.7"                android:endY="145.1"
+                android:type="linear">
+                <item android:offset="0" android:color="#FF000000"/>
+                <item android:offset="0.6" android:color="#FF383180"/>
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
