Estan listos los reportes del administrador (por clientes y por cines)

--- a/app/src/main/res/layout/activity_reporte_item_cine.xml
+++ b/app/src/main/res/layout/activity_reporte_item_cine.xml
@@ -5,20 +5,17 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#332D6C"
         android:padding="16dp">
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_cines"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/tv_nombre_cine"
@@ -31,7 +28,7 @@
             android:maxLines="2"
             android:ellipsize="end"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/switch_cines"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
