--- a/app/src/main/res/layout/activity_reporte_pdf.xml
+++ b/app/src/main/res/layout/activity_reporte_pdf.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Reporte_clientes_PDF">
+    android:layout_height="match_parent">
 
     <com.pdfview.PDFView
         android:id="@+id/vistaPdf"
