lista de peliculas de un encargado y ajuste del nav

--- a/app/src/main/res/layout/despliegue_nav_plus.xml
+++ b/app/src/main/res/layout/despliegue_nav_plus.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></ImageView>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <ImageButton
