--- a/app/src/main/res/layout/activity_reporte_cine.xml
+++ b/app/src/main/res/layout/activity_reporte_cine.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
-        android:text="Reporte Clientes"
+        android:text="Reporte Cine"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="italic"
