--- a/app/src/main/res/color/selector_box_stroke.xml
+++ b/app/src/main/res/color/selector_box_stroke.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@android:color/white" android:state_focused="true"/>
-    <item android:color="@android:color/white" android:state_hovered="true"/>
-    <item android:color="#CCCCCC"/> <!-- Grayish white for default state -->
+    <item android:color="#CCCCCC" android:state_hovered="true"/>
+    <item android:color="#999999"/> <!-- Default light gray -->
 </selector>
